# fluffy-fortnight

./: .env.development  .gitignore  README.md  app.py  dbdiagram.txt  pyproject.toml  todo.md
data/: neetcode150.xlsx
database_backups/: ff_20241124.sqlite
docs/: todo.md
ff/: __init__.py  app.py  config.py  db.py  run.py  schema.sql
ff/auth/: __init__.py  auth.py  routes.py
ff/blueprints/: auth.py
ff/main/: __init__.py  routes.py
ff/problems/: __init__.py  problems.py
ff/seed/: run.py
ff/seed/sql/: 001_interview_status.sql  002_interview_stage.sql  003_difficulty.sql  004_problem_status.sql  005_tags.sql  problems_neetcode150.sql
ff/settings/: __init__.py  settings.py
ff/static/: styles.css
ff/static/css/: styles.css
ff/templates/: base.html  index.html
ff/templates/auth/: login.html  login.html.jinja2  register.html  register.html.jinja2
ff/templates/problems/: blind75.html  blind75.html.jinja2  index.html  index.html.jinja2  neetcode.html  neetcode150.html  neetcode150.html.jinja2
ff/templates/settings/: index.html  index.html.jinja2
ff/views/auth/: __init__.py  routes.py
ff/views/main/: __init__.py  routes.py
ff/views/problems/: __init__.py  routes.py
ff/views/settings/: __init__.py  routes.py
scripts/db/: dbdiagram.txt  fluffy_fortnight_20241124.sql
scripts/db/queries/: ff_20241130.sql
scripts/etl/: extract_companies_and_problem_patterns_from_leetcode_dataset.py  fetch_lc_problems.py  lc_problems_2024-12-14_13-02-01.json  lc_problems_2024-12-14_13-43-38.csv
scripts/notebook/: transform_lc_problems.ipynb
(+25 files in other folders)
