[project]
name = "fluffy-fortnight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.6.1",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "pypika>=0.48.9",
    "wtforms>=3.2.1",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "openpyxl>=3.1.5",
    "black>=24.10.0",
    "aiohttp>=3.11.10",
]
