[project]
name = "fluffy-fortnight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "python-dotenv>=1.0.1",
    "black>=24.10.0",
    "aiohttp>=3.11.10",
    "aiofiles>=24.1.0",
    "flask-wtf>=1.2.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "jinja2-fragments>=1.6.0",
]
